--- a/scss/post.scss
+++ b/scss/post.scss
@@ -22,13 +22,6 @@
 
 @import 'pages/homepage';
 @import 'pages/dashboard';
-@import 'pages/general';
 @import 'pages/profile';
 @import 'pages/murpedagogique';
-
-#page-my-index .db-action-block {
-    width: 100%;
-    border-color: $primary;
-    border-width: 1px;
-    color: $primary;
-}
+@import 'pages/general';
